fix: setting modal on mobile

--- a/src/partials/is-mobile/_setting-modal.scss
+++ b/src/partials/is-mobile/_setting-modal.scss
@@ -2,8 +2,7 @@
 
   .modal.mod-settings.mod-sidebar-layout {
 
-    background: var(--s-bg-svg);
-
+    background: transparent;
 
     .modal-content.vertical-tabs-container {
 
